# Single-Cycle-CPU-Skeleton

./: CMakeLists.txt
src/: ALU.sv  BranchComp.sv  Controller.sv  CoreTop.sv  DEF.sv  Halt.sv  ImmExt.sv  LDFilter.sv  ProgramCounter.sv  RAM.sv  ROM.sv  RegFile.sv  TextBuffer.sv  Top.sv  sim_main.cpp
